// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadMore component tests with isLoading false snapshot testing 1`] = `
<LoadMoreComponent
  getMoreItems={[MockFunction]}
  isLoadingMore={false}
  offset={0}
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
  pageSize={10}
  setOffset={[MockFunction]}
>
  <DataList
    aria-label="Simple data list example"
  >
    <ul
      aria-label="Simple data list example"
      className="pf-c-data-list"
    >
      <DataListItem
        aria-labelledby="kie-datalist-item"
      >
        <li
          aria-labelledby="kie-datalist-item"
          className="pf-c-data-list__item"
          id=""
        >
          <DataListCell
            className="kogito-management-console__load-more"
            key=".0"
            rowid="kie-datalist-item"
          >
            <div
              className="pf-c-data-list__cell kogito-management-console__load-more"
              rowid="kie-datalist-item"
            >
              <Component
                id="load10"
                onClick={[Function]}
                variant="secondary"
              >
                <ComponentWithOuia
                  component={[Function]}
                  componentProps={
                    Object {
                      "children": "Load 10 more",
                      "id": "load10",
                      "onClick": [Function],
                      "variant": "secondary",
                    }
                  }
                  consumerContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                >
                  <Button
                    id="load10"
                    onClick={[Function]}
                    ouiaContext={
                      Object {
                        "isOuia": false,
                        "ouiaId": null,
                      }
                    }
                    variant="secondary"
                  >
                    <button
                      aria-disabled={null}
                      aria-label={null}
                      className="pf-c-button pf-m-secondary"
                      disabled={false}
                      id="load10"
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      Load 10 more
                    </button>
                  </Button>
                </ComponentWithOuia>
              </Component>
               
              <Component
                id="load20"
                onClick={[Function]}
                variant="secondary"
              >
                <ComponentWithOuia
                  component={[Function]}
                  componentProps={
                    Object {
                      "children": "Load 20 more",
                      "id": "load20",
                      "onClick": [Function],
                      "variant": "secondary",
                    }
                  }
                  consumerContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                >
                  <Button
                    id="load20"
                    onClick={[Function]}
                    ouiaContext={
                      Object {
                        "isOuia": false,
                        "ouiaId": null,
                      }
                    }
                    variant="secondary"
                  >
                    <button
                      aria-disabled={null}
                      aria-label={null}
                      className="pf-c-button pf-m-secondary"
                      disabled={false}
                      id="load20"
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      Load 20 more
                    </button>
                  </Button>
                </ComponentWithOuia>
              </Component>
               
              <Component
                id="load50"
                onClick={[Function]}
                variant="secondary"
              >
                <ComponentWithOuia
                  component={[Function]}
                  componentProps={
                    Object {
                      "children": "Load 50 more",
                      "id": "load50",
                      "onClick": [Function],
                      "variant": "secondary",
                    }
                  }
                  consumerContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                >
                  <Button
                    id="load50"
                    onClick={[Function]}
                    ouiaContext={
                      Object {
                        "isOuia": false,
                        "ouiaId": null,
                      }
                    }
                    variant="secondary"
                  >
                    <button
                      aria-disabled={null}
                      aria-label={null}
                      className="pf-c-button pf-m-secondary"
                      disabled={false}
                      id="load50"
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      Load 50 more
                    </button>
                  </Button>
                </ComponentWithOuia>
              </Component>
               
              <Component
                id="load100"
                onClick={[Function]}
                variant="secondary"
              >
                <ComponentWithOuia
                  component={[Function]}
                  componentProps={
                    Object {
                      "children": "Load 100 more",
                      "id": "load100",
                      "onClick": [Function],
                      "variant": "secondary",
                    }
                  }
                  consumerContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                >
                  <Button
                    id="load100"
                    onClick={[Function]}
                    ouiaContext={
                      Object {
                        "isOuia": false,
                        "ouiaId": null,
                      }
                    }
                    variant="secondary"
                  >
                    <button
                      aria-disabled={null}
                      aria-label={null}
                      className="pf-c-button pf-m-secondary"
                      disabled={false}
                      id="load100"
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      Load 100 more
                    </button>
                  </Button>
                </ComponentWithOuia>
              </Component>
            </div>
          </DataListCell>
        </li>
      </DataListItem>
    </ul>
  </DataList>
</LoadMoreComponent>
`;

exports[`LoadMore component tests with isLoading true snapshot testing 1`] = `
<LoadMoreComponent
  getMoreItems={[MockFunction]}
  isLoadingMore={true}
  offset={0}
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
  pageSize={10}
  setOffset={[MockFunction]}
>
  <DataList
    aria-label="Simple data list example"
  >
    <ul
      aria-label="Simple data list example"
      className="pf-c-data-list"
    >
      <DataListItem
        aria-labelledby="kie-datalist-item"
      >
        <li
          aria-labelledby="kie-datalist-item"
          className="pf-c-data-list__item"
          id=""
        >
          <DataListCell
            className="kogito-management-console__load-more"
            key=".0"
            rowid="kie-datalist-item"
          >
            <div
              className="pf-c-data-list__cell kogito-management-console__load-more"
              rowid="kie-datalist-item"
            >
              <Component
                id="loading"
                variant="secondary"
              >
                <ComponentWithOuia
                  component={[Function]}
                  componentProps={
                    Object {
                      "children": Array [
                        "Loading... ",
                        <Spinner
                          size="md"
                        />,
                      ],
                      "id": "loading",
                      "variant": "secondary",
                    }
                  }
                  consumerContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                >
                  <Button
                    id="loading"
                    ouiaContext={
                      Object {
                        "isOuia": false,
                        "ouiaId": null,
                      }
                    }
                    variant="secondary"
                  >
                    <button
                      aria-disabled={null}
                      aria-label={null}
                      className="pf-c-button pf-m-secondary"
                      disabled={false}
                      id="loading"
                      tabIndex={null}
                      type="button"
                    >
                      Loading... 
                      <Spinner
                        size="md"
                      >
                        <span
                          aria-valuetext="Loading..."
                          className="pf-c-spinner pf-m-md"
                          role="progressbar"
                        >
                          <span
                            className="pf-c-spinner__clipper"
                          />
                          <span
                            className="pf-c-spinner__lead-ball"
                          />
                          <span
                            className="pf-c-spinner__tail-ball"
                          />
                        </span>
                      </Spinner>
                    </button>
                  </Button>
                </ComponentWithOuia>
              </Component>
            </div>
          </DataListCell>
        </li>
      </DataListItem>
    </ul>
  </DataList>
</LoadMoreComponent>
`;
